Fixes #30220 - Align Arrow position to center (#8789)
(cherry picked from commit 8d1adbc3e462aa8a397187e6a289402009170416)

--- a/engines/bastion_katello/app/assets/stylesheets/bastion_katello/bastion_katello.scss
+++ b/engines/bastion_katello/app/assets/stylesheets/bastion_katello/bastion_katello.scss
@@ -68,3 +68,7 @@
 .popover-large {
   max-width: 100%;
 }
+
+.uib-increment, .uib-decrement {
+  text-align: center;
+}
